Adding methods to list pending and done works. Optimizong query for work_order data.
