# worker_api/config/routes.rb
@@ -6,8 +6,11 @@ Rails.application.routes.draw do
     resources :clients
     resources :retainers
     resources :tickets
-    resources :work_orders
     get '/work_orders/by_thecnician/:thecnician_id' => 'work_orders#by_thecnician'
+    put '/work_orders/mark_as_done/:id' => 'work_orders#work_done'
+    get '/work_orders/list_pending' => 'work_orders#pending'
+    get '/work_orders/list_done' => 'work_orders#done'
+    resources :work_orders
     resources :thecnicians
   end
 end
